--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <canvas></canvas>
     <script src="js/player.js"></script>
+    <script src="js/enemy.js"></script>
     <script src="js/events.js"></script>
     <script src="js/index.js"></script>
 </body>
