--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/projectile.js"></script>
     <script src="js/player.js"></script>
     <script src="js/enemy.js"></script>
+    <script src="js/sprite.js"></script>
     <script src="js/events.js"></script>
     <script src="js/index.js"></script>
 </body>
