Added health and energy bar with neat image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <canvas></canvas>
+    <div style="position: relative;">
+        <div style="position: absolute;">
+            <div id="energyBar"></div>
+            <div id="healthBar"></div>
+        </div>
+        <canvas></canvas>
+    </div>
     <script src="js/projectile.js"></script>
     <script src="js/player.js"></script>
     <script src="js/enemy.js"></script>
